fix (content): #2071 fix site title overflow in top sites experiment

--- a/content-src/components/TopSites/TopSites.scss
+++ b/content-src/components/TopSites/TopSites.scss
@@ -105,6 +105,11 @@
         // graduates, we should change the HTML instead.
         overflow: visible;
       }
+
+      .site-title {
+        height: 22px;
+        overflow: hidden;
+      }
     }
 
     .site-icon {
